// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GifExpertApp should show a category list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Will Smith slap"
      key="Will Smith slap"
    />
    <GifGrid
      category="ElXokas"
      key="ElXokas"
    />
  </ol>
</Fragment>
`;

exports[`Testing GifExpertApp should show the component correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
